# phardi

./: .gitmodules  CMakeLists.txt  COPYRIGHT.txt  CREDITS.txt  LICENSE  README.md  contributors.txt  nvblas.conf
apps/: CMakeLists.txt  fiber.cpp  pfiber.cpp  phardi.cpp
cmake/modules/: FindMKL.cmake
data/: nvblas.conf
include/: 362_shell_semisphere.hpp  common.hpp  config.hpp.in  constants.hpp  create_kernel_for_dotr2.hpp  create_kernel_for_dsi.hpp  create_kernel_for_dti.hpp  create_kernel_for_gqi.hpp  create_kernel_for_qbi.hpp  create_kernel_for_rumba.hpp  create_signal_multi_tensor.hpp  eigenvaluefield33.hpp  eigenvectorfield33.hpp  ff  image.hpp  intravox_fiber_reconst_sphdeconv_rumba_sd.hpp  intravox_fiber_reconst_sphdeconv_rumba_sd_gpu.hpp  logging.hpp  lsqnonnegvect.hpp  mirt3D.hpp  multi_intravox_fiber_reconstruction.hpp  optionparser.hpp  options.hpp  ppi  storage_adaptators.hpp
src/: ._CMakeLists.txt  CMakeLists.txt  create_kernel_for_rumba.cpp  create_signal_multi_tensor.cpp  intravox_fiber_reconst_sphdeconv_rumba_sd.cpp  intravox_fiber_reconst_sphdeconv_rumba_sd_gpu.cpp  intravox_fiber_reconst_sphdeconv_rumba_sd_kernel.cu  logging.cpp  mirt3D_mexinterp.cpp  multi_intravox_fiber_reconstruction.cpp
superbuild/: Armadillo.cmake  ArrayFire.cmake  Boost.cmake  FFTW.cmake  ITK.cmake  Lapack.cmake  OpenBLAS.cmake  SuperBuild.cmake  ZLIB.cmake
